# usmsb

./: .env.example  .gitignore  AGENT_SDK_BUSINESS_ANALYSIS.md  DETAILED_CHANGES.md  DEVELOPER_QUICK_REFERENCE.md  LICENSE  Makefile  README.md  TASKS.md  agents_check.json  agents_check2.json  check_cpu.ps1  demo_messaging.py  docker-compose.dev.yml  docker-compose.yml  errors.json  fix_e501.py  fix_sandbox.py  get_errors.py  get_meta_agent_errors.py  info_extractor_design.md  info_extractor_design_v3.md  match_result.json  meta_agent.db  meta_agent_vector.db  pyproject.toml  pytest.ini  quote_response.json  quote_result.json  requirements.txt  run_full_tests.py  run_tests.py  tool_test_plan.md  tool_test_results.json
.claude/: settings.local.json
contracts/: .solhint.json  audit-report.md  hardhat.config.js  package-lock.json  package.json
docker/: docker-compose.nodes.yml  entrypoint.node.sh
docs/: AGENT_KEY_MANAGEMENT.md  BLOCKCHAIN_INTEGRATION.md  COMMUNICATION.md  PERMISSION_SYSTEM.md  PRODUCT_DESIGN.md  README.md  SILICON_CIVILIZATION_VISION.md  VIBE_Contract_Development_Plan.md  VIBE_Ecosystem_Design.md  VIBE_Full_Automation_Design.md  VIBE_Proxy_Upgrade_Design.md  agent_protocol_需求对接.md  agent_registration_design.md  agent_sdk_skill_design.md  agi_knowledge_memory_system.md  autonomous_evolution_design_v2.md  concepts.md  copyright.md  info_extractor_design_v4.md  meta_agent_chat_code_review.md  meta_agent_chat_method_review_v2.md  meta_agent_design.md  multi_user_isolation_design.md  permission_control_design.md  platform-overview.md  platform_api_key_modification.md  privacy-policy.md  production-upgrade-plan.md  skills.md  skills_user_manual.md  smart_memory_system_v3.md  staking_marketing_onepager.md  staking_system_design.md  staking_system_whitepaper.md  staking_user_manual.md  strategy_orchestration_design.md  terms-of-service.md  user-guide.md  usmsb-theory.md  usmsb_agent_design_v1.md  (+1 more)
frontend/: Dockerfile  Dockerfile.dev  THEME_DESIGN_DOC.md  eslint.config.js  nginx.conf  vite.config.ts
meta_agent_test_docs/: meta_agent_complete_test.md  meta_agent_test_plan.md  meta_agent_tool_tests.md  meta_agent_tool_tests_2.md  meta_tool_tests_3.md  meta_tool_tests_4.md  meta_tool_tests_5.md  meta_tool_tests_remaining.md  meta_tool_tests_summary.md
tests/: README.md  TEST_EXECUTION_PLAN.md  TEST_GAP_ANALYSIS.md  TEST_PLAN_ACTIVE_MATCHING.md  TEST_PLAN_COLLABORATIONS.md  TEST_PLAN_NETWORK_EXPLORER.md  TEST_PLAN_SIMULATIONS.md  TEST_REPORT_20260313_182500.md  __init__.py  conftest.py  test_agents_business.py  test_anthropic_format.py  test_blockchain_business.py  test_business_api_full_coverage.py  test_business_logic_coverage.py  test_chat_tools.py  test_collaborations_business.py  test_comprehensive.py  test_comprehensive_coverage.py  test_contracts_business.py  test_core_business.py  test_demands_business.py  test_dispute_business.py  test_environments_business.py  test_feedback_business.py  test_gene_capsule_business.py  test_governance_business.py  test_heartbeat_business.py  test_identity_business.py  test_joint_order_business.py  test_learning_business.py  test_matching_business.py  test_meta_agent_matching_business.py  test_negotiations_business.py  test_network_business.py  test_orders_business.py  test_pre_match_negotiation_business.py  test_predictions_business.py  test_registration_business.py  test_reputation_business.py  (+10 more)
typechain-types/: AgentRegistry.ts  AgentWallet.ts  AssetVault.ts  JointOrder.ts  VIBEToken.ts  VIBIdentity.ts  (+4 more)
usmsb-sdk/src/usmsb_sdk/core/skills/usmsb-agent-platform/: package.json  pyproject.toml
usmsb-sdk/src/usmsb_sdk/core/skills/usmsb-agent-platform/lib/: index.d.ts  index.js.map  intent-parser.d.ts  intent-parser.d.ts.map  intent-parser.js.map  platform.js  registration.d.ts.map  registration.js  registration.js.map  stake-checker.d.ts  stake-checker.d.ts.map  stake-checker.js.map  types.js
usmsb-sdk/src/usmsb_sdk/core/skills/usmsb-agent-platform/src-ts/: index.ts  platform.ts  registration.ts  stake-checker.ts
usmsb-sdk/src/usmsb_sdk/core/skills/usmsb-agent-platform/src/usmsb_agent_platform/: intent_parser.py  platform.py  py.typed  stake_checker.py
usmsb-sdk/src/usmsb_sdk/core/skills/usmsb-agent-platform/tests/: test_e2e.py
(+1632 files in other folders)
