[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usmsb-agent-platform"
version = "1.0.0"
description = "USMSB Agent Platform Skill - Collaboration, Marketplace, Discovery, Negotiation, Workflow capabilities for AI Agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "USMSB", email = "contact@usmsb.io"}
]
keywords = [
    "agent",
    "ai",
    "skill",
    "platform",
    "collaboration",
    "marketplace",
    "discovery",
    "negotiation",
    "workflow"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/usmsb/usmsb-sdk"
Documentation = "https://github.com/usmsb/usmsb-sdk#readme"
Repository = "https://github.com/usmsb/usmsb-sdk"
Issues = "https://github.com/usmsb/usmsb-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
usmsb_agent_platform = ["py.typed"]
